// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers/logger/config-serializer redacts sensitive fields 1`] = `
Object {
  "githubAppKey": "***********",
  "nottoken": "b",
  "token": "***********",
}
`;

exports[`helpers/logger/config-serializer replaces functions 1`] = `
Object {
  "api": "[Function]",
  "logger": "[Function]",
  "nottoken": "b",
}
`;
